--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,13 @@
     transform: rotate(360deg);
   }
 }
+
+.text{
+  color:azure;
+}
+.bg{
+background-image: url(../img/fondo-de-pantalla-inspirado-en-estas-dos-palabras-upscaled.png);
+width: 100%;
+height: 90vh;
+background-size: cover;
+}
